[tool.poetry]
name = "api2-python"
version = "0.1.0"
description = ""
authors = ["JuniorD-Isael <isaeldjunior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pytesseract = "^0.3.13"
python-multipart = "^0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
