[tool.poetry]
name = "api2-python"
version = "0.1.0"
description = ""
authors = ["JuniorD-Isael <isaeldjunior@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pytesseract = "^0.3.13"
python-multipart = "^0.0.11"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
